# dss_sprint

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
docs/: api.md  installation.md  usage.md
dss_sprint/: __init__.py  active_learning_indices.py  cli.py  component.py  config_class.py  context.py  datasets.py  diversity_losses.py  ensemble_models.py  ensembling.py  interleaving_sampler.py  model_protocols.py  multi_objective_net.py  sklearn_ensembling.py  sklearn_like_protocols.py  xpath.py
dss_sprint/datasets/: regression1d.py
dss_sprint/datasets/tests/: test_datasets.py
dss_sprint/sample_selection/: __init__.py  individual_scorers.py
dss_sprint/sample_selection/tests/: test_individual_scorers.py
dss_sprint/tests/: test_ensembling.py  test_interleaving_sampler.py
dss_sprint/utils/: component.py  config_class.py  early_stopping.py  instrumentation.py  ipython_html_console.py  log_path.py  persisted_buffer_list.py  tree_namespace.py  wandb_log_path.py  wandb_xpath.py  xpath.py
dss_sprint/utils/tests/: test_component.py  test_config_class.py  test_early_stopping.py  test_instrumentation.py  test_log_path.py  test_persisted_buffer_list.py  test_tree_namespace.py  test_wandb_log_path.py  test_xpath.py
dss_sprint/wip/: config_function.py  context.py
spikes/: baseline_experiment.py  bmdalreg_regression.py  bmdalreg_regression_div_dis.py  copula_examination.py  div_attempt_experiment.py  heteroskedastic_dataset.py  interleaving_sampler.py  regression1d_example.py  rf_active_learning.py  simple_sklearn_regression.py  variance_trick.py
tests/: __init__.py  test_app.py  test_component.py  test_config_class.py  test_datasets.py  test_ensembling.py  test_xpath.py
wandb/: settings
